8135318: CMS wrong max_eden_size for check_gc_overhead_limit

Reviewed-by: jmasa, simonis